testing and coveraging

--- a/bamboo/Makefile
+++ b/bamboo/Makefile
@@ -33,13 +33,19 @@ PROJECT_DIR:=$(DATA_DIR)/$(PROJECT_NAME)
 VENV_DIR:=$(PROJECT_DIR)/virtualenv
 
 # Команда активации виртуального окружения
-ACTIVATE:=. $(VENV_DIR)/bin/activate
+ACTIVATE=. $(VENV_DIR)/bin/activate
 
 # Команда установки из локального репозитория
 PIP_INSTALL:=pip install -f $(DIST_URL)
 
-# Команда
+# Команда установки из файла
 PIP_REQUIRES=$(PIP_INSTALL) -r $(SOURCES_DIR)/$(R);
+
+# Команда запуска coverage
+COVERAGE_CMD=python -m coverage run $(COVERAGE_ARGS)
+
+# Команда запуска тестов Django
+MANAGE_CMD=$(MANAGE_SCRIPT) test $(NOSE_ARGS)
 
 # Список файлов requires
 REQUIRES:=requires.part1.txt requires.part2.txt
@@ -49,6 +55,22 @@ REQUIRES_TEST:=requires.test.txt
 # Название файла локальных настроек проекта
 SETTINGS_LOCAL=settings_local_$(PROJECT_NAME).py
 
+# Путь до manage.py для Django-проектов
+MANAGE_SCRIPT=./manage.py
+
+# Аргументы запуска coverage
+COVERAGE_ARGS:= --branch --source=$(WORKING_DIR) --omit="*/migrations/*,*/virtualenv/*"
+
+# Аргументы запуска nosetests
+NOSE_ARGS:= --verbosity=0 --with-xunit
+
+REPORTS_DIR:=.reports
+COVERAGE_XML:=$(REPORTS_DIR)/coverage.xml
+CLOVER_XML:=$(REPORTS_DIR)/clover.xml
+COVERAGE_HTML:=$(REPORTS_DIR)
+#
+QUITE_CMD:= 1>/dev/null 2>/dev/null || exit
+
 # Имя цели для "раскатки в текущую директорию"
 # Если исходники лежат в текущей директории, ничего копировать не надо
 ifeq ($(WORKING_DIR), $(SOURCES_DIR))
@@ -56,6 +78,19 @@ ifeq ($(WORKING_DIR), $(SOURCES_DIR))
 else
     COPY_CWD_TARGET:=copy-cwd
 endif
+
+# Запускать ли тесты вместе со сбором coverage
+ifdef WITH_COVERAGE
+    DJANGO_TEST_TARGET:=coverage-django-tests
+else
+    DJANGO_TEST_TARGET:=run-django-tests
+endif
+
+ifdef $(TEST_PROCESSES)
+    COVERAGE_ARGS+= --parallel-mode
+    NOSE_ARGS+= --processes=$(TEST_PROCESSES)
+endif
+
 
 # Основные цели
 
@@ -69,7 +104,7 @@ endif
 # настраивает rc-скрипты
 
 deploy-admin: copy-project deploy-basic rcscripts $(POST_DEPLOY_ADMIN_TARGETS)
-	$(info DEPLOY ADMIN)
+	$(info ADMIN DEPLOYING FINISHED SUCCESSFULLY)
 
 # Установка на машине разработчика
 # ================================
@@ -81,7 +116,7 @@ deploy-admin: copy-project deploy-basic rcscripts $(POST_DEPLOY_ADMIN_TARGETS)
 #
 
 deploy-devel: $(COPY_CWD_TARGET) deploy-basic requires-dev $(POST_DEPLOY_DEVEL_TARGETS)
-	$(info DEPLOY DEVEL)
+	$(info DEVEL DEPLOYING FINISHED SUCCESSFULLY)
 
 # Развертывание пакета для тестов
 # ===============================
@@ -93,7 +128,15 @@ deploy-devel: $(COPY_CWD_TARGET) deploy-basic requires-dev $(POST_DEPLOY_DEVEL_T
 #
 
 deploy-test: $(COPY_CWD_TARGET) deploy-basic requires-test symlinks $(POST_DEPLOY_TEST_TARGETS)
-	$(info DEPLOY TEST)
+	$(info TEST DEPLOYING FINISHED SUCCESSFULLY)
+
+# Запуск тестов для Django-проекта
+# ================================
+#
+# запускает management-команду запуска тестов
+
+test-django: $(DJANGO_TEST_TARGET)
+	$(info DJANGO TESTS COMPLETED)
 
 # Служебные цели
 # ===============================
@@ -114,9 +157,8 @@ copy-project: project_dir
 project_dir:
 	mkdir -p $(PROJECT_DIR)
 
-# Процесс раскатки
-# ----------------
-# основные шаги раскатки
+# Процесс развертывания
+# ---------------------
 
 deploy-basic: virtualenv requires
 
@@ -138,3 +180,24 @@ symlinks:
 rcscripts:
 	echo RCSCRIPTS
 	$(info RCSCRIPTS)
+
+# Процесс тестирования
+# --------------------
+
+coverage-django-tests: report-dir clean-reports
+	echo "Running Django tests with coverage"
+	$(ACTIVATE); $(COVERAGE_CMD) $(MANAGE_CMD) $(QUITE_CMD)
+	coverage combine
+	coverage xml -o $(COVERAGE_XML)
+	coverage html -d $(COVERAGE_HTML)
+	coverage2clover -i $(COVERAGE_XML) -o $(CLOVER_XML)
+
+run-django-tests:
+	echo "Running Django tests"
+	$(ACTIVATE); python $(MANAGE_CMD) $(DJANGO_APPS) $(QUITE_CMD)
+
+report-dir:
+	mkdir -p $(REPORTS_DIR)
+
+clean-reports:
+	rm -r $(REPORTS_DIR)/*
