--- a/bamboo/Makefile
+++ b/bamboo/Makefile
@@ -65,6 +65,7 @@ TWISTED_TEST_MODULE:=tests
 
 TRIAL_CMD=$(VENV_DIR)/bin/trial --reporter=subunit $(TWISTED_TEST_MODULE) | subunit-1to2 | subunit2junitxml --no-passthrough --output-to=TEST-results.xml
 
+TRIAL_TESTS=
 
 # Аргументы запуска coverage
 COVERAGE_ARGS:= --branch --source=$(WORKING_DIR) --omit=$(VENV_DIR)/*
@@ -214,7 +215,7 @@ coverage-django-tests: clean-reports report-dir
 
 coverage-twisted-tests: clean-reports report-dir
 	echo "Running Twisted tests with coverage"
-	$(ACTIVATE); $(COVERAGE_CMD) $(TRIAL_CMD) $(QUITE_CMD)
+	$(ACTIVATE); $(COVERAGE_CMD) $(TRIAL_CMD) $(TRIAL_TESTS) $(QUITE_CMD)
 	coverage combine
 	coverage xml -o $(COVERAGE_XML)
 	coverage html -d $(COVERAGE_HTML) $(REPORT_ARGS)
@@ -226,7 +227,7 @@ run-django-tests:
 
 run-twisted-tests:
 	echo "Running Twisted tests"
-	$(ACTIVATE); $(TRIAL_CMD) $(QUITE_CMD)
+	$(ACTIVATE); $(TRIAL_CMD) $(TRIAL_TESTS) $(QUITE_CMD)
 
 
 report-dir:
