--- a/bamboo/Makefile
+++ b/bamboo/Makefile
@@ -219,17 +219,17 @@ rcscripts:
 coverage-django-tests: clean-reports report-dir
 	echo "Running Django tests with coverage"
 	$(ACTIVATE); $(COVERAGE_CMD) $(MANAGE_CMD) $(DJANGO_APPS) $(QUITE_CMD)
-	coverage combine
-	coverage xml -o $(COVERAGE_XML)
-	coverage html -d $(COVERAGE_HTML) $(REPORT_ARGS)
+	python -m coverage combine
+	python -m coverage xml -o $(COVERAGE_XML)
+	python -m coverage html -d $(COVERAGE_HTML) $(REPORT_ARGS)
 	coverage2clover -i $(COVERAGE_XML) -o $(CLOVER_XML)
 
 coverage-twisted-tests: clean-reports report-dir
 	echo "Running Twisted tests with coverage"
 	$(ACTIVATE); $(COVERAGE_CMD) $(TRIAL_CMD) $(QUITE_CMD)
-	coverage combine
-	coverage xml -o $(COVERAGE_XML)
-	coverage html -d $(COVERAGE_HTML) $(REPORT_ARGS)
+	python -m coverage combine
+	python -m coverage xml -o $(COVERAGE_XML)
+	python -m coverage html -d $(COVERAGE_HTML) $(REPORT_ARGS)
 	coverage2clover -i $(COVERAGE_XML) -o $(CLOVER_XML)
 
 run-django-tests:
